<resources>
    <string name="app_name">Wearable Biosensor Analytics</string>

    <string name="group_analytics">Analytics</string>
    <string name="action_checkbox_ekg">Electrocardiograph</string>
    <string name="action_checkbox_pulse_ox">Pulse Oximetry</string>

    <string name="group_session">Session</string>
    <string name="action_start_session">Start Session</string>
    <string name="action_end_session">End Session</string>

    <string name="group_config">Configuration</string>
    <string name="action_bluetooth_menu">Bluetooth Settings...</string>
    <string name="section_format">Viewing %1$s \nUpdate rate: %2$d internals</string>

    <string name="textview">TextView</string>

    <string name="start_session_hint">Start a Session...</string>
    <string name="connect_to_wearable_biosensor">Connect To Wearable Biosensor</string>
    <string name="getting_started">This page will walk you through the steps of starting a fresh
        session to record analytics from your device.\n\n1) Go to your Android Bluetooth Settings
        page in Settings and ensure both devices are paired.\n\n2) Select the sensors you wish to
        use.\n\n3) Press "Connect to Wearable Biosensor".</string>

    <string name="start_session_sensors">Sensors to collect analytics from.</string>
    <string name="start_session_setup">Click below to setup connection with the wearable
        biosensor.</string>

    <string name="electro_cardiograph">Electro-Cardiograph</string>
    <string name="pulse_oximetry">Pulse Oximetry</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="other">Other</string>
</resources>
